<resources>
    <string name="app_name">feed</string>
    <string name="report">report</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="phone_no">Phone no</string>
    <string name="email">Email</string>
    <string name="zip">Zip Code</string>
    <string name="location">Location</string>
    <string name="address">Address</string>
    <string name="submit">Submit</string>
    <string name="enroll">Enroll now</string>
    <string name="no_of_children">No of Children</string>
    <string name="your_query">Your query?</string>
    <string name="default_notification_channel_id">default</string>
</resources>
